examples/test/testpolicy11953.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11953
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key42: value8
      key21: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value9
      podSelector:
        matchLabels:
          key40: value15
          key49: value41
